--- a/src/main/resources/templates/evenement/evenementCommEssaimDetail.html
+++ b/src/main/resources/templates/evenement/evenementCommEssaimDetail.html
@@ -1,16 +1,21 @@
 <!DOCTYPE HTML>
 <html xmlns:th="http://www.thymeleaf.org">
-<head
-	th:replace="include :: common_header(~{::script},~{::style},~{::link})">
-<script th:inline="javascript">
-	const suppeve = /*[[#{supprimerevenement}]]*/null;
-	document.addEventListener("DOMContentLoaded", () => {
-		$('.confirmation').on('click', function() {
-			return confirm(suppeve);
+
+<head th:replace="include :: common_header(~{::script},~{::style},~{::link})">
+	<script th:inline="javascript">
+		const suppeve = /*[[#{supprimerevenement}]]*/null;
+		document.addEventListener("DOMContentLoaded", () => {
+			document.getElementById('supprime').addEventListener("click", (event) => {
+				if (confirm(suppeve)) {
+					return true;
+				}
+				event.preventDefault();
+				return false;
+			}, false);
 		});
-	});
-</script>
+	</script>
 </head>
+
 <body>
 	<nav th:replace="navbar::navbar">Menu</nav>
 	<br />
@@ -20,35 +25,26 @@
 		<div class="row">
 			<div class="col">
 				<h1 class="item">
-					<a th:if="${type}==''" th:href="@{'/evenement/liste'}"
-						th:text="#{evenement}"></a> <a th:if="${type}=='essaim'"
-						th:href="@{'/evenement/essaim/'+${evenement.essaim.id}}"
-						th:text="#{evenement}"></a> <a th:if="${type=='comment'}"
-						th:href="@{'/evenement/listecomment'}" th:text="#{evenementscomm}"></a>
-					<th:block
-						th:text="' '+${#temporals.format(evenement.date, 'yyyy/MM/dd HH:mm')}"></th:block>
+					<a th:if="${type}==''" th:href="@{'/evenement/liste'}" th:text="#{evenement}"></a> <a
+						th:if="${type}=='essaim'" th:href="@{'/evenement/essaim/'+${evenement.essaim.id}}"
+						th:text="#{evenement}"></a> <a th:if="${type=='comment'}" th:href="@{'/evenement/listecomment'}"
+						th:text="#{evenementscomm}"></a>
+					<th:block th:text="' '+${#temporals.format(evenement.date, 'yyyy/MM/dd HH:mm')}"></th:block>
 				</h1>
 			</div>
 			<div class="col">
-				<a
-					th:href="@{'/evenement/essaim/commentaire/modifie/'+${evenement.id}}">
-					<span class="bi-pencil" th:title="#{modifier}"
-					aria-hidden="true"></span>
-				</a>&nbsp; <a
-					th:href="@{'/evenement/modifie/'+${evenement.id}+'?complet=true'}"> <span
-					class="bi-pencil" style="color: red" th:title="#{modifierTout}"
-					aria-hidden="true"></span>
-				</a> <a id="supprime"
-					th:href="@{'/evenement/supprime/'+${evenement.id}}"> <span
-					class="confirmation bi-trash" style="color: red"
-					th:title="#{supprimer}" aria-hidden="true"></span>
+				<a th:href="@{'/evenement/essaim/commentaire/modifie/'+${evenement.id}}">
+					<span class="bi-pencil" th:title="#{modifier}" aria-hidden="true"></span>
+				</a>&nbsp; <a th:href="@{'/evenement/modifie/'+${evenement.id}+'?complet=true'}"> <span
+						class="bi-pencil" style="color: red" th:title="#{modifierTout}" aria-hidden="true"></span>
+				</a> <a id="supprime" th:href="@{'/evenement/supprime/'+${evenement.id}}"> <span class="bi-trash"
+						style="color: red" th:title="#{supprimer}" aria-hidden="true"></span>
 				</a>
 			</div>
 		</div>
 	</div>
 	<div class="container-fluid table-responsive">
-		<table class="table table-sm table-bordered table-striped"
-			id="evenements"
+		<table class="table table-sm table-bordered table-striped" id="evenements"
 			th:with="val=${#strings.equals(evenement.valeur,'')?'':#strings.substring(evenement.valeur, 0, 1)}">
 			<thead>
 				<tr>
@@ -58,10 +54,8 @@
 					<th th:text="#{rucher}"></th>
 					<th:block th:switch="${val}">
 						<th:block th:case="''"></th:block>
-						<th th:case="'-'"
-							th:text="#{NotificationJoursApres}"></th>
-						<th th:case="*"
-							th:text="#{NotificationJoursAvant}"></th>
+						<th th:case="'-'" th:text="#{NotificationJoursApres}"></th>
+						<th th:case="*" th:text="#{NotificationJoursAvant}"></th>
 					</th:block>
 					<th th:text="#{commentaire}"></th>
 				</tr>
@@ -69,16 +63,12 @@
 			<tbody>
 				<tr>
 					<td th:text="#{${evenement.type}}"></td>
-					<td><a th:href="@{'/ruche/'+${evenement.ruche?.id}}"
-						th:text="${evenement.ruche?.nom}"></a></td>
-					<td><a th:href="@{'/essaim/'+${evenement.essaim?.id}}"
-						th:text="${evenement.essaim?.nom}"></a></td>
-					<td><a th:href="@{'/rucher/'+${evenement.rucher?.id}}"
-						th:text="${evenement.rucher?.nom}"></a></td>
+					<td><a th:href="@{'/ruche/'+${evenement.ruche?.id}}" th:text="${evenement.ruche?.nom}"></a></td>
+					<td><a th:href="@{'/essaim/'+${evenement.essaim?.id}}" th:text="${evenement.essaim?.nom}"></a></td>
+					<td><a th:href="@{'/rucher/'+${evenement.rucher?.id}}" th:text="${evenement.rucher?.nom}"></a></td>
 					<th:block th:switch="${val}">
 						<th:block th:case="''"></th:block>
-						<td th:case="'-'" class="num"
-							th:text="${#strings.substring(evenement.valeur, 1)}"></td>
+						<td th:case="'-'" class="num" th:text="${#strings.substring(evenement.valeur, 1)}"></td>
 						<td th:case="*" class="num" th:text="${evenement.valeur}"></td>
 					</th:block>
 					<td th:text="${evenement.commentaire}"></td>
@@ -88,4 +78,5 @@
 	</div>
 	<footer th:replace="include::footer"></footer>
 </body>
+
 </html>
