--- a/src/main/resources/templates/evenement/evenementCommRucheDetail.html
+++ b/src/main/resources/templates/evenement/evenementCommRucheDetail.html
@@ -5,9 +5,13 @@
 	<script th:inline="javascript">
 		const suppeve = /*[[#{supprimerevenement}]]*/null;
 		document.addEventListener("DOMContentLoaded", () => {
-			$('.confirmation').on('click', function () {
-				return confirm(suppeve);
-			});
+			document.getElementById('supprime').addEventListener("click", (event) => {
+				if (confirm(suppeve)) {
+					return true;
+				}
+				event.preventDefault();
+				return false;
+			}, false);
 		});
 	</script>
 </head>
@@ -34,7 +38,7 @@
 				</a>&nbsp; <a th:href="@{'/evenement/modifie/'+${evenement.id}+'?complet=true'}"> <span
 						class="bi-pencil" style="color: red" th:title="#{modifierTout}" aria-hidden="true"></span>
 				</a><a id="supprime" th:href="@{'/evenement/supprime/'+${evenement.id}}">
-					<span class="confirmation bi-trash" style="color: red" th:title="#{supprimer}"
+					<span class="bi-trash" style="color: red" th:title="#{supprimer}"
 						aria-hidden="true"></span>
 				</a>
 			</div>
